# rust-in-action

./: .gitignore
p01-hello/: Cargo.toml
p02-penguins/: Cargo.toml
p03-cereals/: Cargo.toml
p04-race/: Cargo.toml
p05-fruit/: Cargo.toml
p06-letters/: Cargo.toml
p07-create-integer-values/: Cargo.toml
p08-first-steps/: Cargo.toml
p09-numeric-literals/: Cargo.toml
p10-base2-8-16/: Cargo.toml
p11-convert-tryinto/: Cargo.toml
p12-add-floats/: Cargo.toml
p13-complex/: Cargo.toml
p14-while-true-incr-count/: Cargo.toml
p15-match-needles/: Cargo.toml
p16-searching-for-a-number/: Cargo.toml
p17-mandelbrot/: Cargo.toml
p18-add-with-lifetime/: Cargo.toml
p19-generic-add/: Cargo.toml
p20-grep-lite/: Cargo.toml
p21-3arrays/: Cargo.toml
p22-vector-of-vectors/: Cargo.toml
p23-with-regex/: Cargo.toml
p24-read-file/: Cargo.toml  readme.md
p25-define-type/: Cargo.toml
p26-represent-files/: Cargo.toml
p27-newtype-pattern/: Cargo.toml
p28-global-error/: Cargo.toml
p29-parse-log/: Cargo.toml
p30-skeleton-read-trait/: Cargo.toml
p31-cubesat-constellation/: Cargo.toml
p32-implement-copy/: Cargo.toml
p33-check-sats-with-clone-and-copy-traits/: Cargo.toml
p34-implementing-the-copy-triat-manually/: Cargo.toml
p35-int-vs-int/: Cargo.toml
p36-f32-as-u32/: Cargo.toml
p37-to-oblivion/: Cargo.toml
p57-actionkv/: Cargo.toml
p57-actionkv/src/: akv_btree.rs  akv_disk.rs  akv_diskidx.rs  akv_mem.rs  lib.rs
p69-mget/: Cargo.toml
p69-mget/src/: dns.rs  http.rs  main.rs
p70-clock/: Cargo.toml
p70-clock/src/: main.rs
p81-fledgeos/: Cargo.toml  Makefile  fledge.json
p81-fledgeos/.cargo/: config.toml
p81-fledgeos/src/: main.rs
(+133 files in other folders)
