[package]
name = "p81-fledgeos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.10"
x86_64 = "0.14"

[package.metadata.bootimage]
build-command = ["build"]

run-command = ["qemu-system-x86_64", "-drive", "format=raw,file={}"]

